--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,17 @@
 name: Build
 on:
   push:
+    branches:
+      - primary
   workflow_dispatch:
 
 jobs:
   build-website:
     name: buildet die website
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+    permissions:
+        contents: read
+        deployments: write
     steps:
     - uses: actions/checkout@v3
     - name: Setup Node.js environment
@@ -26,3 +31,16 @@ jobs:
         name: webfiles
         path: ./docs/.vitepress/dist/
         retention-days: 3
+    
+    - name: Publish to Cloudflare Pages
+      uses: cloudflare/pages-action@v1
+      with:
+        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        projectName: elektrobam-website-demo
+        directory: ./docs/.vitepress/dist/
+        # Optional: Enable this if you want to have GitHub Deployments triggered
+        gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+        # Optional: Switch what branch you are publishing to.
+        # By default this will be the branch which triggered this workflow
+        branch: primary
